[tool.poetry]
name = "robokassa"
version = "0.1.3"
description = "Unofficial Robokassa API"
authors = ["Ben Puls <mail@benpuls.ru>"]
repository = "https://github.com/byBenPuls/robokassa"
homepage = "https://github.com/byBenPuls/robokassa"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
