[tool.poetry]
name = "robokassa"
version = "0.3.1"
description = "Unofficial Robokassa API"
authors = ["Ben Puls <mail@benpuls.ru>"]
repository = "https://github.com/byBenPuls/robokassa"
homepage = "https://github.com/byBenPuls/robokassa"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = "^2024.8.6"
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = ">=1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
